--- a/BookPoolV2/Views/Home/About.cshtml
+++ b/BookPoolV2/Views/Home/About.cshtml
@@ -40,27 +40,27 @@
     <div class="col s12 m12 l12">
         <p>
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:30px;" class="material-icons">location_searching</i>
-            We help customers find the best local shop to match their needs for the cheapest price there is.
+            We help Lebanese citizens and expacts living in Lebanon buy and sell books at the best prices.
         </p>
         <hr />
         <p>
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:30px;" class="material-icons">motorcycle</i>
-            We receive your order, package it and deliver it to your door step in less than 3 hours.
+            We buy the books you wish to sell and deliver them to your customers.
         </p>
         <hr />
         <p>
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:30px;" class="material-icons">compare_arrows</i>
-            We exchange your order if it didn't suit you.
+            Damaged books are returned and clients are refunded. 
         </p>
         <hr />
         <p>
-            <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:30px;" class="material-icons">monetization_on</i>
-            We reimburse your money if you didn't like your purchase.
+            <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:22px; font-style:normal;font-weight:bold;">L.L.</i>
+            All the prices available on Bookpool are in Lebanses Lira.
         </p>
         <hr />
         <p>
             <img style="width:35px; float: left;padding-right: 10px;" src="@Url.Content("~/Content/img/flags/Lebanese.png")">
-            Most importantly, we help you buy from local Lebanese shops.
+            Most importantly, we help you read with the best prices in the market.
         </p>
     </div>
 </div>
