--- a/BookPoolV2/Views/Home/Contact.cshtml
+++ b/BookPoolV2/Views/Home/Contact.cshtml
@@ -25,7 +25,6 @@
 
 </div>
 
-<hr />
 
 <div class="row container">
     <div class="col s12 m12 l12">
@@ -50,12 +49,12 @@
             70 102 981
         </p>
     </div>
-    <div class="col s12 m12 l12" style="margin-top:20px; margin-bottom:20px;">
+    @*<div class="col s12 m12 l12" style="margin-top:20px; margin-bottom:20px;">
         <p style="max-width:300px; margin:auto;">
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed);" class="material-icons">local_phone</i>
             70 238 460
         </p>
-    </div>
+    </div>*@
     <div class="col s12 m12 l12" style="margin-top:20px; margin-bottom:20px;">
         <p style="max-width:300px; margin:auto;">
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed);" class="material-icons">email</i>
