--- a/BookPoolV2/Views/Home/Index.cshtml
+++ b/BookPoolV2/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a id="hideMessage">No</a>
+                        <a id="hideMessage">I'm here to buy</a>
                         <a style="color:white;font-weight:bold;float:right;" href="@Url.Action("MyBooks","Home")">Sell a book</a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             </p>
                         </div>
                         <div class="card-action">
-                            <a id="hideMessage">No</a>
+                            <a id="hideMessage">I'm here to buy</a>
                             <a style="color:white;font-weight:bold;float:right;" class="modal-trigger" data-target="sell-my-book-modal">Sell a book</a>
                         </div>
                     </div>
