--- a/BookPoolV2/Views/Academic/Index.cshtml
+++ b/BookPoolV2/Views/Academic/Index.cshtml
@@ -129,12 +129,12 @@
     <div class="col s12 m12 l12" style="margin-bottom:30px;margin-top:50px;">
         <h5>
             <i class="material-icons left red-text">search</i>
-            Search by Academical Institutions
+            Search by Academic Institutions
         </h5>
         <div class="card" style="box-shadow:none; -webkit-box-shadow:none;">
             <div class="card-body">
                 <div style="float:left;width: 100%;padding-right: 15px;">
-                    <h5 class="screen-reader-text">Academical institution</h5>
+                    <h5 class="screen-reader-text">Academic institution</h5>
                     @Html.DropDownList("searchUniversities", AvailableInstitutionsList, new { @style = "width:100%;", @name = "university" })
                 </div>
                 <div style="float:left;width: 100%;padding-right: 15px;">
@@ -179,26 +179,7 @@
         }
         if (books.Count() == 0)
         {
-            <div class="col s12 m12 l12" style="text-align:center;">
-                <img src="@Url.Content("~/img/books_not_found.jpg")" />
-                <h4>
-                    We didn't find a book that matches your search result.
-                </h4>
-                @{
-                    if (Request.IsAuthenticated)
-                    {
-                        <h5>
-                            Do you have university/shool books you wish to sell? Just <a href="@Url.Action("MyBooks","Home")">click here</a> and sell them.
-                        </h5>
-                    }
-                    else
-                    {
-                        <h5>
-                            Do you have university/shool books you wish to sell? Just <a style="cursor:pointer;" class="modal-trigger" data-target="sell-my-book-modal">click here</a> and sell them.
-                        </h5>
-                    }
-                }
-            </div>
+            @Html.Partial("_NoBooksFound")
         }
     }
 
@@ -323,11 +304,35 @@
 <script>
 
     $(document).on('click', '.filterResults', function () {
-        var filterName = $(this).attr('data-Filter');
-        var filterValue = $(this).attr('data-Value');
+        var isSelected = $(this).hasClass('active');
+        if (isSelected) {
+            console.log('IS SLECTED');
+            $(this).removeClass('active');
+        } else {
+            var filterName = $(this).attr('data-Filter');
+            var filterValue = $(this).attr('data-Value');
 
-        $('.filterResults').removeClass('active');
-        $(this).addClass('active');
+            if (filterName == 'Language') {
+                $('.filterResults[data-Filter="Language"]').removeClass('active');
+            }
+
+            if (filterName == 'sortByPrice') {
+                $('.filterResults[data-Filter="sortByPopularity"]').removeClass('active');
+            }
+
+            if (filterName == 'sortByPopularity') {
+                $('.filterResults[data-Filter="sortByPrice"]').removeClass('active');
+            }
+
+            $(this).addClass('active');
+        }
+
+        console.log('getFilters() = ' + getFilters());
+
+        var filter = getFilters();
+        if (filter.length > 0) {
+            filter = '&' + filter;
+        }
 
         var institutionID = $('#searchUniversities').val();
 
@@ -345,7 +350,7 @@
             course = '';
         }
 
-        var url = '@Url.Action("Index","Academic")?Institution=' + institutionID + '&Course=' + course + '&' + filterName + "=" + filterValue;
+        var url = '@Url.Action("Index","Academic")?Institution=' + institutionID + '&Course=' + course + filter;
         window.location = url;
     });
 
