--- a/BookPoolV2/Views/Home/FilteredByCategory.cshtml
+++ b/BookPoolV2/Views/Home/FilteredByCategory.cshtml
@@ -66,6 +66,10 @@
                 </div>
             }
         }
+        if (books.Count() == 0)
+        {
+            @Html.Partial("_NoBooksFound")
+        }
     }
 
 </div>
