--- a/BookPoolV2/Views/Home/MyBooks.cshtml
+++ b/BookPoolV2/Views/Home/MyBooks.cshtml
@@ -418,8 +418,13 @@
             Contact Phone Number
             <i class="material-icons" style="color: red;">phone</i>
         </h5>
-        <span style="color:red;">Enter a valid phone number so Bookpool can contact you to deliver your book when it's sold</span>
-        <hr />
+        @{
+            if (string.IsNullOrEmpty(aspNetUser.PhoneNumber))
+            {
+                <span style="color:red;">Enter a valid phone number so Bookpool can contact you to deliver your book when it's sold</span>
+                <hr />
+            }
+        }
         <div class="input-field col s12" style="padding:0!important;">
             <input id="phoneNumber" type="text" class="validate" value="@aspNetUser.PhoneNumber">
             <label for="phoneNumber" style="left:0;">Phone Number</label>
@@ -433,7 +438,7 @@
 
     <div class="col s12 m12 l12" style="margin-top:30px;">
         <h5>
-            MY BOOKS - Books i want to sell
+            MY BOOKS - Books I want to sell
             <i class="material-icons" style="color: red;">library_books</i>
         </h5>
         <hr />
@@ -514,7 +519,7 @@
                         </div>
                     </div>
                     <div id="selectInstitutionsContainer" style="float:left;width: 100%;padding-right: 15px; display:none;">
-                        <h5 class="screen-reader-text">Academical institution</h5>
+                        <h5 class="screen-reader-text">Academic institution</h5>
                         <div id="institutionsContainer">
                             @Html.DropDownList("searchUniversities", AvailableInstitutionsList, new { @style = "width:100%;", @name = "university" })
                         </div>
@@ -563,7 +568,9 @@
                         </select>
                     </div>
                     <div style="float:left;width: 100%;padding-right: 15px;">
-                        <input id="bookPrice" type="number" style="border-bottom:1px solid #9e9e9e!important;" placeholder="The price you wish to sell it for in Lebanese Pounds" class="input-field" />
+                        <input type="text" name="currency-field" id="bookPrice" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" 
+                               data-type="currency" placeholder="LBP 10,000">
+                        @*<input id="bookPrice" type="number" style="border-bottom:1px solid #9e9e9e!important;" placeholder="Price in LBP" class="input-field" />*@
                     </div>
                     <div style="float:left;width: 100%;padding-right: 15px;">
                         <a id="createAvailableBook" class="waves-effect waves-light btn-large pull-right red">
@@ -764,7 +771,7 @@
     function checkForErrors() {
         var googleID = $('.booksCheckbox:checked').val();
         var bookName = $('.booksCheckbox:checked').attr('data-BookName');
-        var price = $('#bookPrice').val();
+        var price = $('#bookPrice').val().replace(/[^\d.-]/g, '');
         var condition = $('#bookCondition').val();
         var category = $('#bookCategory').val();
         var language = $('#bookLanguage').val();
@@ -819,7 +826,7 @@
     $(document).on('click', '#createAvailableBook', function () {
         var googleID = $('.booksCheckbox:checked').val();
         var bookName = $('.booksCheckbox:checked').attr('data-BookName');
-        var price = $('#bookPrice').val();
+        var price = $('#bookPrice').val().replace(/[^\d.-]/g, '');
         var condition = $('#bookCondition').val();
         var category = $('#bookCategory').val();
         var language = $('#bookLanguage').val();
@@ -973,5 +980,94 @@
             }
         });
     });
+
+</script>
+
+
+<script>
+    // Jquery Dependency
+
+    $("input[data-type='currency']").on({
+        keyup: function () {
+            formatCurrency($(this));
+        },
+        blur: function () {
+            formatCurrency($(this), "blur");
+        }
+    });
+
+
+    function formatNumber(n) {
+        // format number 1000000 to 1,234,567
+        return n.replace(/\D/g, "").replace(/\B(?=(\d{3})+(?!\d))/g, ",")
+    }
+
+
+    function formatCurrency(input, blur) {
+        // appends $ to value, validates decimal side
+        // and puts cursor back in right position.
+
+        // get input value
+        var input_val = input.val();
+
+        // don't validate empty input
+        if (input_val === "") { return; }
+
+        // original length
+        var original_len = input_val.length;
+
+        // initial caret position 
+        var caret_pos = input.prop("selectionStart");
+
+        // check for decimal
+        if (input_val.indexOf(".") >= 0) {
+
+            // get position of first decimal
+            // this prevents multiple decimals from
+            // being entered
+            var decimal_pos = input_val.indexOf(".");
+
+            // split number by decimal point
+            var left_side = input_val.substring(0, decimal_pos);
+            var right_side = input_val.substring(decimal_pos);
+
+            // add commas to left side of number
+            left_side = formatNumber(left_side);
+
+            // validate right side
+            right_side = formatNumber(right_side);
+
+            // On blur make sure 2 numbers after decimal
+            if (blur === "blur") {
+                right_side += "00";
+            }
+
+            // Limit decimal to only 2 digits
+            right_side = right_side.substring(0, 2);
+
+            // join number by .
+            input_val = "LBP " + left_side + "." + right_side;
+
+        } else {
+            // no decimal entered
+            // add commas to number
+            // remove all non-digits
+            input_val = formatNumber(input_val);
+            input_val = "LBP " + input_val;
+
+            // final formatting
+            if (blur === "blur") {
+                input_val += ".00";
+            }
+        }
+
+        // send updated string to input
+        input.val(input_val);
+
+        // put caret back in the right position
+        var updated_len = input_val.length;
+        caret_pos = updated_len - original_len + caret_pos;
+        input[0].setSelectionRange(caret_pos, caret_pos);
+    }
 
 </script>
