--- a/BookPoolV2/Views/Home/Product.cshtml
+++ b/BookPoolV2/Views/Home/Product.cshtml
@@ -13,6 +13,27 @@
     BookPoolResult availableBook = ViewBag.AvailableBook as BookPoolResult;
 }
 
+<style>
+    .outer {
+        display: block;
+        width: 120px;
+        margin: auto;
+        /* The 6px is for right and bottom as they have more shadow 2px is for top and left*/
+        /*height: auto;*/
+        cursor: pointer;
+    }
+
+    .inner {
+        margin: 0px;
+        border-radius: 50%;
+        display: block;
+        height: 120px;
+        width: 120px;
+        box-shadow: 2px 2px 10px #333;
+        padding: 18px;
+    }
+</style>
+
 <div id="goToHomeContainer" style="display:inline-flex;width:100%;margin-top:50px;">
     <a href="@Url.Action("Index","Home")" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
         <i class="material-icons">keyboard_arrow_left</i>
@@ -108,17 +129,22 @@
                         @{
                             if (Request.IsAuthenticated)
                             {
-                                <div class="row addtoCart" data-BookID="@availableBook.ID" data-Price="@availableBook.Price" style="text-align: center; color: var(--primaryGrey);">
-                                    <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
-                                    <span>Add to cart</span>
+                                <div class="outer">
+                                    <div class="row addtoCart inner" data-BookID="@availableBook.ID" data-Price="@availableBook.Price" style="text-align: center; color: var(--primaryGrey);">
+                                        <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
+                                        <span>Add to cart</span>
+                                    </div>
                                 </div>
                             }
                             else
                             {
-                                <div class="row sidenav-trigger" data-target="side-menu" style="text-align: center; color: var(--primaryGrey);">
-                                    <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
-                                    <span>Add to cart</span>
-                                </div>
+                    <div class="outer">
+                        <div class="row sidenav-trigger inner" data-target="side-menu" style="text-align: center; color: var(--primaryGrey);">
+                            <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
+                            <span>Add to cart</span>
+                        </div>
+                    </div>
+
                             }
                         }
                         @*<hr>*@
@@ -139,7 +165,7 @@
             <div class="card-content col s6 m3 l3" style="padding-top:0px; cursor:default;">
                 <div class="row">
                     <h5 style="margin:auto;">
-                        Publish On
+                        Published In
                     </h5>
                 </div>
                 <div class="row">
@@ -239,7 +265,7 @@
                         <div class="card-stacked" style="width:100%;">
                             <div class="card-content" style="padding:20px;">
                                 <span>
-                                    @availableBook.Description
+                                    @Html.Raw(availableBook.Description)
                                 </span>
                             </div>
                         </div>
