--- a/BookPoolV2/Views/Home/ProductNotAvailable.cshtml
+++ b/BookPoolV2/Views/Home/ProductNotAvailable.cshtml
@@ -88,7 +88,7 @@
             <div class="card-content col s6 m3 l3" style="padding-top:0px; cursor:default;">
                 <div class="row">
                     <h5 style="margin:auto;">
-                        Publish On
+                        Published In
                     </h5>
                 </div>
                 <div class="row">
