--- a/BookPoolV2/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/BookPoolV2/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,12 +2,48 @@
     ViewBag.Title = "Forgot Password Confirmation";
 }
 
+<style>
+
+    #searchBooksContainer {
+        display: none;
+    }
+
+    #locationMainHeader {
+        display: none;
+    }
+
+    #mainSearchBar {
+        height: 60px !important;
+    }
+
+    h4 {
+        display: block;
+        margin-block-start: 1.33em;
+        margin-block-end: 1.33em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+</style>
+
+
+<div id="goToHomeContainer" style="display:inline-flex;width:100%;">
+    <a href="@Url.Action("Login","Account")" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
+        <i class="material-icons">keyboard_arrow_left</i>
+    </a>
+    <a href="@Url.Action("Login","Account")" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
+        <span style="font-family:AvenirNextBold;">Back</span>
+    </a>
+</div>
+
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h4>
+        We have sent you an email, please check your inbox to reset your password.
+    </h4>
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Thank you for using Bookpool!
     </p>
 </div>
-	
+
