--- a/BookPoolV2/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/BookPoolV2/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,8 +2,33 @@
     ViewBag.Title = "Reset password confirmation";
 }
 
+<style>
+
+    #searchBooksContainer {
+        display: none;
+    }
+
+    #locationMainHeader {
+        display: none;
+    }
+
+    #mainSearchBar {
+        height: 60px !important;
+    }
+
+    h4 {
+        display: block;
+        margin-block-start: 1.33em;
+        margin-block-end: 1.33em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+</style>
+
+
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h4>@ViewBag.Title.</h4>
 </hgroup>
 <div>
     <p>
