--- a/BookPoolV2/Views/Account/ForgotPassword.cshtml
+++ b/BookPoolV2/Views/Account/ForgotPassword.cshtml
@@ -3,12 +3,44 @@
     ViewBag.Title = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
+<style>
+
+    #searchBooksContainer {
+        display: none;
+    }
+
+    #locationMainHeader {
+        display: none;
+    }
+
+    #mainSearchBar {
+        height: 60px !important;
+    }
+
+    h4 {
+        display: block;
+        margin-block-start: 1.33em;
+        margin-block-end: 1.33em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+</style>
+
+
+<div id="goToHomeContainer" style="display:inline-flex;width:100%;">
+    <a href="@Url.Action("Login","Account")" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
+        <i class="material-icons">keyboard_arrow_left</i>
+    </a>
+    <a href="@Url.Action("Login","Account")" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
+        <span style="font-family:AvenirNextBold;">Back</span>
+    </a>
+</div>
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
+    <h4 style="margin-bottom:20px;">Enter your email.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -19,11 +51,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+            <input type="submit" class="btn btn-default" value="Send Link to Email" />
         </div>
     </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
