--- a/BookPoolV2/Views/Account/Register.cshtml
+++ b/BookPoolV2/Views/Account/Register.cshtml
@@ -62,8 +62,15 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+        <div style="float:left;width:50%;text-align:left;">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Register" />
+            </div>
+        </div>
+        <div style="float:left;width:50%;text-align:right;">
+            <p>
+                @Html.ActionLink("Forgot your password?", "ForgotPassword")
+            </p>
         </div>
     </div>
 }
