--- a/BookPoolV2/Views/Account/ResetPassword.cshtml
+++ b/BookPoolV2/Views/Account/ResetPassword.cshtml
@@ -3,12 +3,35 @@
     ViewBag.Title = "Reset password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<style>
+
+    #searchBooksContainer {
+        display: none;
+    }
+
+    #locationMainHeader {
+        display: none;
+    }
+
+    #mainSearchBar {
+        height: 60px !important;
+    }
+
+    h4 {
+        display: block;
+        margin-block-start: 1.33em;
+        margin-block-end: 1.33em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+</style>
+
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
+    <h4 style="margin-bottom:20px;">Reset your password.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
@@ -37,6 +60,6 @@
     </div>
 }
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+@*@section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }*@
