--- a/BookPoolV2/Views/Home/About.cshtml
+++ b/BookPoolV2/Views/Home/About.cshtml
@@ -45,22 +45,22 @@
         <hr />
         <p>
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:30px;" class="material-icons">motorcycle</i>
-            We buy the books you wish to sell and deliver them to your customers.
+            We buy the books you wish to sell and deliver it to other readers.
         </p>
         <hr />
         <p>
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:30px;" class="material-icons">compare_arrows</i>
-            Damaged books are returned and clients are refunded. 
+            Damaged books are returned and clients are refunded.
         </p>
         <hr />
         <p>
-            <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:22px; font-style:normal;font-weight:bold;">L.L.</i>
-            All the prices available on Bookpool are in Lebanses Lira.
+            <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed); font-size:20px; font-style:normal;font-weight:bold;">L.L.</i>
+            All the prices available on Bookpool are in Lebanese Lira.
         </p>
         <hr />
         <p>
             <img style="width:35px; float: left;padding-right: 10px;" src="@Url.Content("~/Content/img/flags/Lebanese.png")">
-            Most importantly, we help you read with the best prices in the market.
+            Most importantly, we help you read more for less.
         </p>
     </div>
 </div>
