--- a/BookPoolV2/Views/Home/Contact.cshtml
+++ b/BookPoolV2/Views/Home/Contact.cshtml
@@ -46,19 +46,13 @@
     <div class="col s12 m12 l12" style="margin-top:20px; margin-bottom:20px;">
         <p style="max-width:300px; margin:auto;">
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed);" class="material-icons">local_phone</i>
-            70 102 981
+            81 254 414
         </p>
     </div>
-    @*<div class="col s12 m12 l12" style="margin-top:20px; margin-bottom:20px;">
-        <p style="max-width:300px; margin:auto;">
-            <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed);" class="material-icons">local_phone</i>
-            70 238 460
-        </p>
-    </div>*@
     <div class="col s12 m12 l12" style="margin-top:20px; margin-bottom:20px;">
         <p style="max-width:300px; margin:auto;">
             <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed);" class="material-icons">email</i>
-            bachir.nasser1@gmail.com
+            bookpool.me@gmail.com
         </p>
     </div>
 </div>
