--- a/Bookpool Management/Views/Home/Index.cshtml
+++ b/Bookpool Management/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>Registered Users</h2>
+        <h2>Uploaded Books</h2>
         <table id="sellingBooks">
             <thead>
                 <tr>
@@ -104,7 +104,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>Registered Users</h2>
+        <h2>Search for Books</h2>
         <table id="searchingBooks">
             <thead>
                 <tr>
@@ -118,7 +118,7 @@
                         Image
                     </th>
                     <th>
-                        Owner Name
+                        Client Name
                     </th>
                     <th>
                         Phone Number
@@ -149,7 +149,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>Registered Users</h2>
+        <h2>Orders</h2>
         <table id="orders">
             <thead>
                 <tr>
@@ -166,10 +166,10 @@
                         Book Price (L.L.)
                     </th>
                     <th>
-                        Buyer UserName
+                        Client UserName
                     </th>
                     <th>
-                        Buyer Phone Number
+                        Client Phone Number
                     </th>
                     <th>
                         Seller UserName
