--- a/BookPoolV2/Views/Home/Index.cshtml
+++ b/BookPoolV2/Views/Home/Index.cshtml
@@ -177,7 +177,7 @@
     @{
         if (Request.IsAuthenticated)
         {
-            <div>
+            <div style="margin:auto;">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="goo">
                     <defs>
                         <filter id="goo">
@@ -208,7 +208,7 @@
         }
         else
         {
-            <div>
+            <div style="margin:auto;">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="goo">
                     <defs>
                         <filter id="goo">
