--- a/BookPoolV2/Views/Home/MyBooks.cshtml
+++ b/BookPoolV2/Views/Home/MyBooks.cshtml
@@ -143,7 +143,7 @@
     });
 }
 
-    <style>
+<style>
     .tabs .tab a:hover, .tabs .tab a.active {
         border-left: 0px;
     }
@@ -426,7 +426,7 @@
             }
         }
         <div class="input-field col s12" style="padding:0!important;">
-            <input id="phoneNumber" type="text" class="validate" value="@aspNetUser.PhoneNumber">
+            <input id="phoneNumber" type="number" class="validate phone-number" value="@aspNetUser.PhoneNumber">
             <label for="phoneNumber" style="left:0;">Phone Number</label>
         </div>
         <div class="col s12" style="padding:0px;">
