--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -56,6 +56,13 @@
     @*<script src="@Url.Content("~/Content/js/app.js")"></script>*@
 
     <style>
+
+        input.phone-number {
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="50" height="40"><text x="5" y="27" style="font: bold 16px Arial;">+961:</text></svg>') no-repeat;
+            box-sizing: border-box !important;
+            padding-left: 50px !important;
+        }
+
         #side-form {
             z-index: 2147483647 !important
         }
