--- a/BookPoolV2/Views/Home/ProductNotAvailable.cshtml
+++ b/BookPoolV2/Views/Home/ProductNotAvailable.cshtml
@@ -169,7 +169,7 @@
                         <div class="card-stacked" style="width:100%;">
                             <div class="card-content" style="padding:20px;">
                                 <span>
-                                    @availableBook.Description
+                                    @Html.Raw(availableBook.Description)
                                 </span>
                             </div>
                         </div>
