--- a/BookPoolV2/Views/Home/Index.cshtml
+++ b/BookPoolV2/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
     }
     else
     {
-        <div class="row rowmargins">
+        <div class="row rowmargins" style="margin-top:50px;">
             <a href="@Url.Action("Index","Home")" class="sidenav-trigger" style="display: flex;color:var(--primaryRed);cursor:pointer;width:100%;">
                 <i class="material-icons">keyboard_arrow_left</i>
                 <span style="font-family:AvenirNextBold;">Clear Search</span>
