--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -326,16 +326,10 @@
                     }
                 }
                 <div id="goToHomeContainer" style="display:none;">
-                    <a href="/" class="sidenav-trigger" style="        display: inherit;
-        width: 30px;
-        color: var(--primaryRed);
-        cursor: pointer;">
+                    <a href="/" class="sidenav-trigger" style="display: inherit; width: 30px; color: var(--primaryRed); cursor: pointer;">
                         <i class="material-icons">keyboard_arrow_left</i>
                     </a>
-                    <a href="/" class="sidenav-trigger" style="        display: inherit;
-        margin-left: 0px;
-        cursor: pointer;
-">
+                    <a href="/" class="sidenav-trigger" style="display: inherit; margin-left: 0px; cursor: pointer;">
                         <span style="font-family:AvenirNextBold;">Home</span>
                     </a>
                 </div>
